# jnp3-lab4

./: .gitignore  CMakeLists.txt
lab4/: CMakeLists.txt  lab4.cpp  lab4.h
